<resources>
    <string name="app_name">SICENTANG ITK</string>
    <string name="hint_email">Email Anda</string>
    <string name="hint_password">Password Anda</string>
    <string name="hint_password1">Ulangi Password Anda</string>
    <string name="hint_nama">Nama Anda</string>
    <string name="login">Login Disini</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_hilang">KEHILANGAN</string>
    <string name="btn_temukan">MENEMUKAN</string>
    <string name="btn_laporkanLain">HAL LAINNYA</string>
    <string name="guest">Belum Memiliki Akun? Daftar Disini</string>
    <string name="logout">Logout</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="welcome">Selamat Datang</string>
    <string name="profile_image">Select Image</string>
    <string name="facebook_app_id">268042760266432</string>
    <string name="account_kit_client_token">b3922cc2a154c3cb5d4ecda7b2414542</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
